# modern-python-valbaca

./: README.md  pyproject.toml
src/modern_python_valbaca/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
