[tool.poetry]
name = "modern-python-valbaca"
version = "0.1.0"
description = ""
authors = ["Valentin Baca <valbaca@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/valbaca/modern-python-valbaca"
repository = "https://github.com/valbaca/modern-python-valbaca"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
modern-python-valbaca = "modern_python_valbaca.console:main"